Update Cardiovascular Disease Prediction.ipynb

--- a/Cardiovascular Disease Prediction.ipynb
+++ b/Cardiovascular Disease Prediction.ipynb
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    " dataset values were collected at the moment of medical examination.# Load necessary libraries\n",
+    "# Load necessary libraries\n",
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
